# Nivaro

./: .gitignore  CSRF_PROTECTION.md  DEPLOYMENT.md  README.md  dev.bat  dev.sh  setup.sh
.github/workflows/: backend.yml  ci.yml  deploy-production.yml  deploy-staging.yml  frontend.yml
app/: .env.development  .env.production  .prettierignore  index.html  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json  vite.config.ts  wrangler.toml
app/app/: layout.tsx  page.tsx
app/app/clubs/: page.tsx
app/app/dashboard/: page.tsx
app/components/: Navigation.tsx
app/components/assignments/: AssignmentManager.tsx
app/components/badges/: BadgesAndCertificates.tsx
app/components/curriculum/: CurriculumBuilder.tsx
app/components/discussions/: DiscussionForum.tsx
app/components/peer-review/: PeerReviewSystem.tsx
app/contexts/: AuthContext.tsx
app/lib/: auth.ts  clubs.ts  curriculum.ts
app/public/: og-image-placeholder.txt
app/src/: App.tsx  middleware.ts
app/src/__tests__/: analytics.test.tsx  announcements.test.tsx  (+12 more)
backend/: .env.example  Cargo.toml  D1_SETUP.md  schema.sql  wrangler.toml
backend/src/: forum.rs  lib.rs  meetings.rs  models.rs
backend/src/handlers/: announcements.rs  assignments.rs  auth.rs  auth_old.rs  badges.rs  clubs.rs  courses.rs  curriculum.rs  dashboard.rs  discussions.rs  events.rs  lessons.rs  members.rs  mod.rs  notifications.rs  peer_reviews.rs  progress.rs  projects.rs
backend/src/models/: mod.rs
landing/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
landing/src/: App.tsx  index.css  vite-env.d.ts
(+128 files in other folders)
