[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["artur <arturmisiurev@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["http"] }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }
